🌿 Pipeline fix